--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -57,11 +57,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="PJc-qJ-utD" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="PJc-qJ-utD" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PJc-qJ-utD" id="if4-i2-kJf">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zc8-65-ocs">
@@ -78,25 +78,53 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1O-eh-4MC">
-                                            <rect key="frame" x="89" y="41" width="270" height="68"/>
+                                            <rect key="frame" x="89" y="41" width="270" height="48"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zCi-Ya-ioN" userLabel="favButton">
+                                            <rect key="frame" x="319" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="Chg-52-7TP"/>
+                                                <constraint firstAttribute="height" constant="30" id="gMh-vB-kzr"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="PJc-qJ-utD" eventType="touchUpInside" id="V2E-T0-sqd"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1i-ET-1QC" userLabel="retweetButton">
+                                            <rect key="frame" x="279" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="Rjb-mk-nwV"/>
+                                                <constraint firstAttribute="height" constant="30" id="Rrz-qf-P34"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="PJc-qJ-utD" eventType="touchUpInside" id="4aH-1d-Ykh"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="zCi-Ya-ioN" firstAttribute="leading" secondItem="W1i-ET-1QC" secondAttribute="trailing" constant="10" id="1EC-6A-yS7"/>
                                         <constraint firstItem="Zc8-65-ocs" firstAttribute="top" secondItem="if4-i2-kJf" secondAttribute="topMargin" id="6AW-aj-LY5"/>
                                         <constraint firstItem="e1O-eh-4MC" firstAttribute="top" secondItem="geM-Pd-KJl" secondAttribute="bottom" constant="4" id="6e4-3X-T1t"/>
                                         <constraint firstItem="Zc8-65-ocs" firstAttribute="leading" secondItem="if4-i2-kJf" secondAttribute="leadingMargin" id="74f-sJ-r8E"/>
                                         <constraint firstItem="geM-Pd-KJl" firstAttribute="leading" secondItem="Zc8-65-ocs" secondAttribute="trailing" constant="8" id="HDx-EL-QwH"/>
                                         <constraint firstItem="e1O-eh-4MC" firstAttribute="trailing" secondItem="if4-i2-kJf" secondAttribute="trailingMargin" id="Jem-2p-gbZ"/>
                                         <constraint firstItem="geM-Pd-KJl" firstAttribute="top" secondItem="if4-i2-kJf" secondAttribute="topMargin" id="N64-tc-GXg"/>
-                                        <constraint firstItem="e1O-eh-4MC" firstAttribute="bottom" secondItem="if4-i2-kJf" secondAttribute="bottomMargin" id="SjL-rK-Go3"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="zCi-Ya-ioN" secondAttribute="bottom" constant="10" id="PiA-cd-sA1"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="W1i-ET-1QC" secondAttribute="bottom" constant="10" id="VFU-fC-HZP"/>
                                         <constraint firstItem="e1O-eh-4MC" firstAttribute="leading" secondItem="Zc8-65-ocs" secondAttribute="trailing" constant="8" id="XTg-n0-JbP"/>
+                                        <constraint firstItem="zCi-Ya-ioN" firstAttribute="top" secondItem="e1O-eh-4MC" secondAttribute="bottom" constant="10" id="l5c-tb-53O"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="zCi-Ya-ioN" secondAttribute="trailing" constant="10" id="xBG-Oh-k9R"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="zCi-Ya-ioN" id="sNp-np-i4Y"/>
                                     <outlet property="profileImageView" destination="Zc8-65-ocs" id="cIp-Wd-edU"/>
+                                    <outlet property="retweetButton" destination="W1i-ET-1QC" id="xE2-2U-6FS"/>
                                     <outlet property="tweetContent" destination="e1O-eh-4MC" id="QDO-Wp-18z"/>
                                     <outlet property="userNameLabel" destination="geM-Pd-KJl" id="til-A7-Wzc"/>
                                 </connections>
@@ -114,11 +142,66 @@
                                 <action selector="onLogout:" destination="UM6-AL-Aau" id="UAg-tw-2pQ"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="MoH-d1-CzV">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="e0N-YI-eVy" kind="presentation" id="VaE-rO-ZBH"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yfs-DA-Leb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1565.5999999999999" y="100.29985007496252"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="qIi-Nh-roq">
+            <objects>
+                <viewController id="g5d-hT-bmW" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cIU-Ej-UZW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="im3-ba-kYG">
+                                <rect key="frame" x="0.0" y="56" width="375" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="8hV-YY-cTB"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BRX-XP-af5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="im3-ba-kYG" firstAttribute="top" secondItem="BRX-XP-af5" secondAttribute="top" id="10f-YJ-6ws"/>
+                            <constraint firstItem="im3-ba-kYG" firstAttribute="leading" secondItem="BRX-XP-af5" secondAttribute="leading" id="bSV-bz-lhw"/>
+                            <constraint firstItem="BRX-XP-af5" firstAttribute="trailing" secondItem="im3-ba-kYG" secondAttribute="trailing" id="gGP-rt-f0v"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="X4n-Ki-fcI">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="iCP-ho-Tia">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="g5d-hT-bmW" id="jqI-mk-Y7c"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="RGK-WC-x17">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="g5d-hT-bmW" id="ZwJ-1s-FAI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="im3-ba-kYG" id="7zT-G3-TwV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LEc-d0-xvx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3184.8000000000002" y="100.29985007496252"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dWd-We-ytQ">
@@ -140,8 +223,32 @@
             </objects>
             <point key="canvasLocation" x="820" y="101"/>
         </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="MQb-2Q-mnd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="e0N-YI-eVy" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xp8-6t-4ML">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.098243133479999994" green="0.59685749119999998" blue="1" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="g5d-hT-bmW" kind="relationship" relationship="rootViewController" id="jgf-Q8-7fc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q2A-fr-sHy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2314" y="100"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
